# news-collector

./: .gitignore  config.toml  pyproject.toml  requirements.txt
app/: config.py  main.py  scraper.py  summarizer.py
app/static/: style.css
app/templates/: index.html  results.html
